Deployment edit and FE fix