@@ -4,8 +4,8 @@ import sk.fmfi.listng.course.domain.Course;
 import sk.fmfi.listng.course.dto.CourseDto;
 import sk.fmfi.listng.infrastructure.common.dto.MultiLangTextDto;
 
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CourseAssembler {
 
@@ -15,14 +15,16 @@ public class CourseAssembler {
         dto.name = new MultiLangTextDto(course.getName());
         dto.abbreviation = new MultiLangTextDto(course.getAbbreviation());
         dto.periodId = course.getPeriod();
-        dto.groups = GroupAssembler.toDto(course.getGroups());
+        if (course.getGroups() != null) {
+            dto.groups = GroupAssembler.toDto(course.getGroups());    
+        }
         return dto;
     }
 
     public static List<CourseDto> toDto(List<Course> courses) {
         return courses.stream()
                 .map(CourseAssembler::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static Course fromDto(CourseDto dto) {
@@ -31,6 +33,9 @@ public class CourseAssembler {
         course.setName(MultiLangTextDto.fromDto(dto.name));
         course.setAbbreviation(MultiLangTextDto.fromDto(dto.abbreviation));
         course.setPeriod(dto.periodId);
+        if (dto.groups != null) {
+            course.setGroups(new HashSet<>(GroupAssembler.fromDto(dto.groups)));
+        }
         return course;
     }
 }
